--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="container mybody" id="img">
             <div class="jumbotron">
             <div class="row">
-                <div class="col-md">
+                <div class="col-md-12">
                     
                           <h1 class="text-center">Kasirye Ggwanga</h1>
                           <h2 class="text-center">1952 - 2020</h2>
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md">
+                <div class="col-md-12">
                     <h3>The following list is a time line of Kasirye Ggwanga's Life</h3>
 
                     <ul>
@@ -55,7 +55,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md">
+                <div class="col-md-12">
                     <footer>
                         <cite>
                             Writtern and coded by <a href="https://github.com/joshuamakula">Joshua Makula</a>
